# ansible-mcp-demo

./: .gitignore  client_example.py
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml  requirements.txt
app/: client.py  client_example.py  firewall-server.py
playbooks/: get_pan_facts.yml
playbooks/inventory/: hosts.yml
playbooks/inventory/group_vars/: pa_fw copy.yml  pa_fw.yml  pa_fw_external.yml
playbooks/roles/gather_security_rules/tasks/: main.yml
playbooks/roles/gather_security_zones/tasks/: main.yml
playbooks/roles/gather_virtual_router/tasks/: main.yml
playbooks/roles/gather_virtual_router/vars/: main.yml
