[project]
name = "ansible-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ansible",
    "pyyaml",
    "python-dotenv",
    "ntc_templates",
    "jinja2",
    "ansible-pylibssh",
    "ansible-lint",
    "pytz",
    "ipython",
    "requests",
    "openai",
    "fastmcp",
    "pan-python",
    "pan-os-python (>=1.12.3,<2.0.0)",
    "panos-upgrade-assurance (>=1.3.0,<2.0.0)"
]
